# smart-text-analyzer

./: .gitignore  CMakeLists.txt  README.md  bpe.c  bpe.h  cal_similaridade.c  cal_similaridade.h  files.c  files.h  gestao_documentos.c  gestao_documentos.h  main.c  manipulacao_matrizes.c  manipulacao_matrizes.h  vetorizacao.c  vetorizacao.h
DOCS/: Doxyfile
html/: _c_make_c_compiler_id_8c.html  annotated.html  annotated_dup.js  bpe_8c.html  bpe_8c.js  bpe_8h.html  bpe_8h.js  bpe_8h_source.html  cal__similaridade_8c.html  cal__similaridade_8c.js  cal__similaridade_8h.html  cal__similaridade_8h.js  cal__similaridade_8h_source.html  classes.html  dir_0de67de9667aa563ded51dd0abd5899a.html  dir_29493262b44f4429d52d427084ce1a91.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_f89abcb304c928c7d889aa5625570de5.html  doxygen_crawl.html  files.html  files_8c.html  files_8c.js  files_8h.html  files_8h.js  files_8h_source.html  files_dup.js  functions.html  functions_vars.html  gestao__documentos_8c.html  gestao__documentos_8c.js  gestao__documentos_8h.html  gestao__documentos_8h.js  gestao__documentos_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8c.html  (+26 more)
latex/: annotated.tex  bpe_8c.tex  bpe_8h.tex  bpe_8h_source.tex  cal__similaridade_8c.tex  cal__similaridade_8h.tex  cal__similaridade_8h_source.tex  dir_0de67de9667aa563ded51dd0abd5899a.tex  dirs.tex  files.tex  files_8c.tex  files_8h.tex  files_8h_source.tex  gestao__documentos_8c.tex  gestao__documentos_8h.tex  gestao__documentos_8h_source.tex  (+12 more)
(+169 files in other folders)
